--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,8 @@ services:
 
   db:
     image: mongo:6.0.2
+    ports:
+      - 27017:21017
     environment:
       - MONGO_INITDB_ROOT_USERNAME=root
       - MONGO_INITDB_ROOT_PASSWORD=root
@@ -23,7 +25,7 @@ services:
       - ME_CONFIG_MONGODB_SERVER=db
       - ME_CONFIG_MONGODB_AUTH_USERNAME=root
       - ME_CONFIG_MONGODB_AUTH_PASSWORD=root
-      - ME_CONFIG_MONGODB_AUTH_ADMINUSERNAME=root
-      - ME_CONFIG_MONGODB_AUTH_ADMINPASSWORD=root
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=root
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=root
     depends_on:
       - db
